# flutter-sw-rend

./: .metadata  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/funguscow/sw_rend/: BufferedSurface.kt  EglContext.kt  SwRendPlugin.kt  TestNativePlugin.kt
example/: README.md  analysis_options.yaml  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/funguscow/test_native_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt  main.cc  my_application.cc  my_application.h
example/linux/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugin_registrant.h  generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugin_registrant.h  generated_plugins.cmake
example/windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  resource.h  utils.cpp  utils.h  win32_window.cpp  win32_window.h
ios/: sw_rend.podspec
ios/Classes/: SwRendPlugin.swift
lib/: software_texture.dart  sw_rend.dart  sw_rend_method_channel.dart  sw_rend_platform_interface.dart  test_native.dart  test_native_method_channel.dart  test_native_platform_interface.dart
linux/: CMakeLists.txt  sw_pixel_buffer.cc  sw_rend_plugin.cc
linux/include/sw_rend/: sw_pixel_buffer.h  sw_rend_plugin.h
macos/: sw_rend.podspec
macos/Classes/: SwRendPlugin.swift
test/: test_native_method_channel_test.dart  test_native_test.dart
windows/: CMakeLists.txt  sw_rend_plugin.cpp  sw_rend_plugin.h  sw_rend_plugin_c_api.cpp
windows/include/sw_rend/: sw_rend_plugin_c_api.h
